--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 </footer>
 <script type="text/javascript" src="http://lib.h-ui.net/jquery/1.9.1/jquery.min.js"></script> 
-<script type="text/javascript" src="static/h-ui/js/h-ui.js"></script>
+<script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>
 <!--<script type="text/javascript" src="http://lib.h-ui.net/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script> -->
 </body>
 </html>
