--- a/index.html
+++ b/index.html
@@ -63,15 +63,12 @@
 			&copy;邱薪个人小站
 		</p>
 </div>
+<div style ='margin:0 auto;width:0px;height:0px;overflow:hidden;' >
+<img src='https://obamax.github.io/favicon.ico' / >
+</div >
 </footer>
 <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script> 
 <script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>
 <!--<script type="text/javascript" src="http://lib.h-ui.net/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script> -->
-<script>
-$(function{if(navigator.userAgent.match(/MicroMessenger/i)){		
-var weixinShareLogo = 'https://obamax.github.io/favicon.ico';		
-	$('body').prepend('<div style=" overflow:hidden; width:0px; height:0; margin:0 auto; position:absolute; top:-800px;"><img src="'+ weixinShareLogo +'"></div>')	};
-});
-</script>
 </body>
 </html>
