--- a/index.html
+++ b/index.html
@@ -57,18 +57,12 @@
 </div>
 </div>
 <footer class="footer mt-20">
-<div class="container-fluid">
-		<nav><img src="static/images/wechat.jpg" alt="微信" class="thumbnail" width="128px" height="128px"></nav>
-		<p>
-			&copy;邱薪个人小站
-		</p>
-</div>
 <div style ='margin:0 auto;width:0px;height:0px;overflow:hidden;' >
 <img src='https://obamax.github.io/favicon.ico' / >
 </div >
 </footer>
-<script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script> 
+<!--<script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script> 
 <script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>
-<!--<script type="text/javascript" src="http://lib.h-ui.net/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script> -->
+<script type="text/javascript" src="http://lib.h-ui.net/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script> -->
 </body>
 </html>
